aws/NetworkAcls-sa-east-1.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "SubnetId": "subnet-a81e85df", 
     "NetworkAclId": "acl-e05ad285", 
     "NetworkAclAssociationId": "aclassoc-61309405"
    }, 
    {
     "SubnetId": "subnet-f964c7a0", 
     "NetworkAclId": "acl-e05ad285", 
     "NetworkAclAssociationId": "aclassoc-62309406"
    }, 
    {
     "SubnetId": "subnet-fba09e9e", 
     "NetworkAclId": "acl-e05ad285", 
     "NetworkAclAssociationId": "aclassoc-63309407"
    }
   ], 
   "NetworkAclId": "acl-e05ad285", 
   "VpcId": "vpc-dff0b8ba", 
   "Tags": [], 
   "Entries": [
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": true, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }, 
    {
     "RuleNumber": 100, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "allow"
    }, 
    {
     "RuleNumber": 32767, 
     "Protocol": "-1", 
     "Egress": false, 
     "CidrBlock": "0.0.0.0/0", 
     "RuleAction": "deny"
    }
   ], 
   "IsDefault": true
  }
 ]
}
